--- a/contact.html
+++ b/contact.html
@@ -73,155 +73,159 @@
   <div class="page-content">
 
 
-  <section class="contact-title-container col-12">
-    <h2>Get in touch!</h2>
-  </section>
+    <section class="contact-title-container col-12">
+      <h2>Get in touch!</h2>
+    </section>
 
-  <!--Information articles section-->
-  <section class="row">
-    <article class="col-3">
-      <h4>General inquiries</h4>
-      <p>info@googlenews.com</p>
-      <p>+846 795 85 96</p>
-    </article>
-    <article class="col-3">
-      <h4>New business</h4>
-      <p>Melissa Humble</p>
-      <p>melissa.humble@googlenews.com</p>
-    </article>
-    <article class="col-3">
-      <h4>Careers</h4>
-      <p>job@googlenews.com</p>
-      <p>internship@googlenews.com</p>
-    </article>
-    <div class="contact-icons-container col-3">
-      <img src="Tumblr.png"><img src="LinkedIn.png"><img src="Vector.png">
-    </div>
-  </section>
-  <!--End of Information articles section-->
+    <!--Information articles section-->
+    <section class="row">
+      <article class="col-3">
+        <h4>General inquiries</h4>
+        <p>info@googlenews.com</p>
+        <p>+846 795 85 96</p>
+      </article>
+      <article class="col-3">
+        <h4>New business</h4>
+        <p>Melissa Humble</p>
+        <p>melissa.humble@googlenews.com</p>
+      </article>
+      <article class="col-3">
+        <h4>Careers</h4>
+        <p>job@googlenews.com</p>
+        <p>internship@googlenews.com</p>
+      </article>
+      <div class="contact-icons-container col-3">
+        <img src="Tumblr.png"><img src="LinkedIn.png"><img src="Vector.png">
+      </div>
+    </section>
+    <!--End of Information articles section-->
 
-  <!--Map-->
-  <div class="mapouter col-12">
-    <div class="gmap_canvas"><iframe width="2000" height="287" id="gmap_canvas"
-        src="https://maps.google.com/maps?q=Ebbe%20Lieberathsgatan%2018C,%20412%2065%20G%C3%B6teborg&t=&z=13&ie=UTF8&iwloc=&output=embed"
-        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+    <!--Map-->
+    <div class="mapouter col-12">
+      <div class="gmap_canvas"><iframe width="2000" height="287" id="gmap_canvas"
+          src="https://maps.google.com/maps?q=Ebbe%20Lieberathsgatan%2018C,%20412%2065%20G%C3%B6teborg&t=&z=13&ie=UTF8&iwloc=&output=embed"
+          frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         <a href="https://123movies-to.org"></a><br>
         <a href="https://www.embedgooglemap.net"></a>
+      </div>
     </div>
+    <!--End of Map-->
+
+    <!--Divider-->
+    <div>
+      <hr>
+    </div>
+    <!-- End of Divider-->
+
+    <!--"Meet the team" section-->
+    <section class="meet-team-container row-12">
+      <h2 class="meet-team-title-container">Meet the team</h2>
+      <!--First row-->
+      <div class="row">
+        <div class="col-md-2">
+          <img class="portrait__img" src="https://images.pexels.com/photos/697509/pexels-photo-697509.jpeg">
+          <h3>Big CEO man</h3>
+          <p>CEO</p>
+        </div>
+
+        <div class="col-md-2">
+          <img class="portrait__img" src="https://images.pexels.com/photos/3619947/pexels-photo-3619947.jpeg">
+          <h3>Chad</h3>
+          <p>PO</p>
+        </div>
+        <div class="col-md-2">
+          <img class="portrait__img" src="https://images.pexels.com/photos/8154157/pexels-photo-8154157.jpeg">
+          <h3>Karima Garis</h3>
+          <p>CTO</p>
+        </div>
+        <div class="col-md-2">
+          <img class="portrait__img" src="https://images.pexels.com/photos/7989139/pexels-photo-7989139.jpeg">
+          <h3>Numbers guy</h3>
+          <p>Finacial Director</p>
+        </div>
+        <div class="col-md-2">
+          <img class="portrait__img" src="https://images.pexels.com/photos/7394562/pexels-photo-7394562.jpeg">
+          <h3>Karen</h3>
+          <p>HR</p>
+        </div>
+        <div class="col-md-2">
+          <img class="portrait__img" src="https://images.pexels.com/photos/756484/pexels-photo-756484.jpeg">
+          <h3>Bob</h3>
+          <p>HR</p>
+        </div>
+      </div>
+      <!-- Second row-->
+      <div class="meet-team-container__second row">
+        <div class="col-md-2">
+          <img class="portrait__img" src="https://images.pexels.com/photos/4775198/pexels-photo-4775198.jpeg">
+          <h3>Saga</h3>
+          <p>Senior UX Designer</p>
+        </div>
+        <div class="col-md-2">
+          <img class="portrait__img" src="https://images.pexels.com/photos/4571276/pexels-photo-4571276.jpeg">
+          <h3>Johnny</h3>
+          <p>Senior Graphical Designer</p>
+        </div>
+        <div class="col-md-2">
+          <img class="portrait__img" src="https://images.pexels.com/photos/2698935/pexels-photo-2698935.jpeg">
+          <h3>Al'n Berto</h3>
+          <p>Front-end Developer</p>
+        </div>
+        <div class="col-md-2">
+          <img class="portrait__img" src="https://images.pexels.com/photos/897817/pexels-photo-897817.jpeg">
+          <h3>Trevor Tired</h3>
+          <p>Full-stack Developer</p>
+        </div>
+        <div class="col-md-2">
+          <img class="portrait__img" src="https://images.pexels.com/photos/3791136/pexels-photo-3791136.jpeg">
+          <h3>Sarah Slumber</h3>
+          <p>Senior Back-end Developer</p>
+        </div>
+        <div class="col-md-2">
+          <img class="portrait__img" src="https://images.pexels.com/photos/5778562/pexels-photo-5778562.jpeg">
+          <h3>Christina</h3>
+          <p>Social Media Manager</p>
+        </div>
+      </div>
+    </section>
+    <!-- End of "Meet the team" section-->
+
+    <!--Divider-->
+    <div>
+      <hr>
+    </div>
+    <!--End of Divider-->
+
+    <!--Footer-->
+    <footer class="row">
+      <div class="col-md-3">
+        <h3>About us</h3>
+        <p>What we do</p>
+        <p>Who we are</p>
+      </div>
+      <div class="col-md-3">
+        <h3>About you</h3>
+        <p>Customers</p>
+        <p>Latest</p>
+      </div>
+      <div class="col-md-3">
+        <h3>Address</h3>
+        <p>Google Street 2.</p>
+        <p>526 42 Googleville</p>
+      </div>
+      <div class="footer-copyright col-md-3">
+        <p><b>Copyright 2022 Google News</b></p>
+      </div>
+    </footer>
+    <!--End Footer-->
   </div>
-  <!--End of Map-->
-
-  <!--Divider-->
-  <div>
-    <hr>
-  </div>
-  <!-- End of Divider-->
-
-  <!--"Meet the team" section-->
-  <section class="meet-team-container row-12">
-    <h2 class="meet-team-title-container">Meet the team</h2>
-    <!--First row-->
-    <div class="row">
-      <div class="col-2">
-        <img class="portrait__img" src="https://images.pexels.com/photos/697509/pexels-photo-697509.jpeg">
-        <h3>Big CEO man</h3>
-        <p>CEO</p>
-      </div>
- 
-    <div class="col-2">
-      <img class="portrait__img" src="https://images.pexels.com/photos/3619947/pexels-photo-3619947.jpeg">
-      <h3>Chad</h3>
-      <p>PO</p>
-    </div>
-    <div class="col-2">
-      <img class="portrait__img" src="https://images.pexels.com/photos/8154157/pexels-photo-8154157.jpeg">
-      <h3>Karima Garis</h3>
-      <p>CTO</p>
-    </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://images.pexels.com/photos/7989139/pexels-photo-7989139.jpeg">
-        <h3>Numbers guy</h3>
-        <p>Finacial Director</p>
-      </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://images.pexels.com/photos/7394562/pexels-photo-7394562.jpeg">
-        <h3>Karen</h3>
-        <p>HR</p>
-      </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://images.pexels.com/photos/756484/pexels-photo-756484.jpeg">
-        <h3>Bob</h3>
-        <p>HR</p>
-    </div>
-  </div>
-    <!-- Second row-->
-    <div class="meet-team-container__second row">
-      <div class="col-2">
-        <img class="portrait__img" src="https://images.pexels.com/photos/4775198/pexels-photo-4775198.jpeg">
-        <h3>Saga</h3>
-        <p>Senior UX Designer</p>
-      </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://images.pexels.com/photos/4571276/pexels-photo-4571276.jpeg">
-        <h3>Johnny</h3>
-        <p>Senior Graphical Designer</p>
-      </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://images.pexels.com/photos/2698935/pexels-photo-2698935.jpeg">
-        <h3>Al'n Berto</h3>
-        <p>Front-end Developer</p>
-      </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://images.pexels.com/photos/897817/pexels-photo-897817.jpeg">
-        <h3>Trevor Tired</h3>
-        <p>Full-stack Developer</p>
-      </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://images.pexels.com/photos/3791136/pexels-photo-3791136.jpeg">
-        <h3>Sarah Slumber</h3>
-        <p>Senior Back-end Developer</p>
-      </div>
-      <div class="col-2">
-        <img class="portrait__img" src="https://images.pexels.com/photos/5778562/pexels-photo-5778562.jpeg">
-        <h3>Christina</h3>
-        <p>Social Media Manager</p>
-      </div>
-    </div>
-  </section>
-  <!-- End of "Meet the team" section-->
-
-
-<div>
-  <hr>
-</div>
-  <!--Footer-->
-  <footer class="row">
-    <div class="col-md-3">
-      <h3>About us</h3>
-      <p>What we do</p>
-      <p>Who we are</p>
-    </div>
-    <div class="col-md-3">
-      <h3>About you</h3>
-      <p>Customers</p>
-      <p>Latest</p>
-    </div>
-    <div class="col-md-3">
-      <h3>Address</h3>
-      <p>Google Street 2.</p>
-      <p>526 42 Googleville</p>
-    </div>
-    <div class="footer-copyright col-md-3">
-      <p><b>Copyright 2022 Google News</b></p>
-    </div>
-  </footer>
-  <!--End Footer-->
-</div>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 <!--JS Scripts-->
-<script type="text/javascript" src="./assets/js/menu.js"></script> <!--Mobile menu JS-->
-<script type="text/javascript" src="./assets/js/script.js"></script> <!--JSON API request JS-->
+<script type="text/javascript" src="./assets/js/menu.js"></script>
+<!--Mobile menu JS-->
+<script type="text/javascript" src="./assets/js/script.js"></script>
+<!--JSON API request JS-->
 
 </html>
