--- a/contact.html
+++ b/contact.html
@@ -123,33 +123,33 @@
       <!--First row-->
       <div class="row">
         <div class="col-md-2">
-          <img class="portrait__img" src="https://images.pexels.com/photos/697509/pexels-photo-697509.jpeg">
+          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Big CEO man.jpeg">
           <h3>Big CEO man</h3>
           <p>CEO</p>
         </div>
 
         <div class="col-md-2">
-          <img class="portrait__img" src="https://images.pexels.com/photos/3619947/pexels-photo-3619947.jpeg">
+          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Chad.jpeg">
           <h3>Chad</h3>
           <p>PO</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="https://images.pexels.com/photos/8154157/pexels-photo-8154157.jpeg">
+          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Karima Garis.jpeg">
           <h3>Karima Garis</h3>
           <p>CTO</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="https://images.pexels.com/photos/7989139/pexels-photo-7989139.jpeg">
+          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Numbers guy.jpeg">
           <h3>Numbers guy</h3>
           <p>Finacial Director</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="https://images.pexels.com/photos/7394562/pexels-photo-7394562.jpeg">
+          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Karen.jpeg">
           <h3>Karen</h3>
           <p>HR</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="https://images.pexels.com/photos/756484/pexels-photo-756484.jpeg">
+          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Bob.jpeg">
           <h3>Bob</h3>
           <p>HR</p>
         </div>
@@ -157,32 +157,32 @@
       <!-- Second row-->
       <div class="meet-team-container__second row">
         <div class="col-md-2">
-          <img class="portrait__img" src="https://images.pexels.com/photos/4775198/pexels-photo-4775198.jpeg">
+          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Saga.jpeg">
           <h3>Saga</h3>
           <p>Senior UX Designer</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="https://images.pexels.com/photos/4571276/pexels-photo-4571276.jpeg">
+          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Johnny.jpeg">
           <h3>Johnny</h3>
           <p>Senior Graphical Designer</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="https://images.pexels.com/photos/2698935/pexels-photo-2698935.jpeg">
+          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Al'n Berto.jpeg">
           <h3>Al'n Berto</h3>
           <p>Front-end Developer</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="https://images.pexels.com/photos/897817/pexels-photo-897817.jpeg">
+          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Trevor Tired.jpeg">
           <h3>Trevor Tired</h3>
           <p>Full-stack Developer</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="https://images.pexels.com/photos/3791136/pexels-photo-3791136.jpeg">
+          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Sarah Slumber.jpeg">
           <h3>Sarah Slumber</h3>
           <p>Senior Back-end Developer</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="https://images.pexels.com/photos/5778562/pexels-photo-5778562.jpeg">
+          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Christina.jpeg">
           <h3>Christina</h3>
           <p>Social Media Manager</p>
         </div>
