Changed src directory to specific folder

--- a/company.html
+++ b/company.html
@@ -136,33 +136,33 @@
       <!--First row-->
       <div class="row">
         <div class="col-md-2">
-          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Big CEO man.jpeg">
+          <img class="portrait__img" src="assets/Img/Big CEO man.jpeg">
           <h3>Big CEO man</h3>
           <p>CEO</p>
         </div>
 
         <div class="col-md-2">
-          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Chad.jpeg">
+          <img class="portrait__img" src="assets/Img/Chad.jpeg">
           <h3>Chad</h3>
           <p>PO</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Karima Garis.jpeg">
+          <img class="portrait__img" src="assets/Img/Karima Garis.jpeg">
           <h3>Karima Garis</h3>
           <p>CTO</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Numbers guy.jpeg">
+          <img class="portrait__img" src="assets/Img/Numbers guy.jpeg">
           <h3>Numbers guy</h3>
           <p>Finacial Director</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Karen.jpeg">
+          <img class="portrait__img" src="assets/Img/Karen.jpeg">
           <h3>Karen</h3>
           <p>HR</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Bob.jpeg">
+          <img class="portrait__img" src="assets/Img/Bob.jpeg">
           <h3>Bob</h3>
           <p>HR</p>
         </div>
@@ -170,32 +170,32 @@
       <!-- Second row-->
       <div class="meet-team-container__second row">
         <div class="col-md-2">
-          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Saga.jpeg">
+          <img class="portrait__img" src="assets/Img/Saga.jpeg">
           <h3>Saga</h3>
           <p>Senior UX Designer</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Johnny.jpeg">
+          <img class="portrait__img" src="assets/Img/Johnny.jpeg">
           <h3>Johnny</h3>
           <p>Senior Graphical Designer</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Al'n Berto.jpeg">
+          <img class="portrait__img" src="assets/Img/Al'n Berto.jpeg">
           <h3>Al'n Berto</h3>
           <p>Front-end Developer</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Trevor Tired.jpeg">
+          <img class="portrait__img" src="assets/Img/Trevor Tired.jpeg">
           <h3>Trevor Tired</h3>
           <p>Full-stack Developer</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Sarah Slumber.jpeg">
+          <img class="portrait__img" src="assets/Img/Sarah Slumber.jpeg">
           <h3>Sarah Slumber</h3>
           <p>Senior Back-end Developer</p>
         </div>
         <div class="col-md-2">
-          <img class="portrait__img" src="/GroupAssignment/Group 4 Assignment/assets/Img/Christina.jpeg">
+          <img class="portrait__img" src="assets/Img/Christina.jpeg">
           <h3>Christina</h3>
           <p>Social Media Manager</p>
         </div>
