Added md to bootstrap

--- a/company.html
+++ b/company.html
@@ -75,19 +75,19 @@
 
     <!--Company info-->
     <section class="row contact-title-container">
-      <article class="col-3">
+      <article class="col-md-3">
         <h2>5000</h2>
         <h2>People employed</h2>
       </article>
-      <article class="col-3">
+      <article class="col-md-3">
         <h2>1967</h2>
         <h2>Year founded</h2>
       </article>
-      <article class="col-3">
+      <article class="col-md-3">
         <h2>50+</h2>
         <h2>countries with subscribers</h2>
       </article>
-      <article class="col-3">
+      <article class="col-md-3">
         <h2>100</h2>
         <h2>News per day</h2>
       </article>
