--- a/contact.html
+++ b/contact.html
@@ -79,22 +79,22 @@
 
     <!--Information articles section-->
     <section class="row">
-      <article class="col-3">
+      <article class="col-md-3">
         <h4>General inquiries</h4>
         <p>info@googlenews.com</p>
         <p>+846 795 85 96</p>
       </article>
-      <article class="col-3">
+      <article class="col-md-3">
         <h4>New business</h4>
         <p>Melissa Humble</p>
         <p>melissa.humble@googlenews.com</p>
       </article>
-      <article class="col-3">
+      <article class="col-md-3">
         <h4>Careers</h4>
         <p>job@googlenews.com</p>
         <p>internship@googlenews.com</p>
       </article>
-      <div class="contact-icons-container col-3">
+      <div class="contact-icons-container col-md-3">
         <img src="Tumblr.png"><img src="LinkedIn.png"><img src="Vector.png">
       </div>
     </section>
